# chttp

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
include/: chttp.h  security.h
public_html/: index.html
src/: connection.c  connection.h  error.h  file_handler.c  file_handler.h  http_parser.c  http_parser.h  http_response.c  http_response.h  logger.c  logger.h  main.c  server.c  server.h
tests/: CMakeLists.txt
tests/fuzz/: fuzz_parser.c
tests/integration/: test_server.sh
tests/unit/: test_file_handler.cpp  test_http_parser.cpp  test_response.cpp
